# CSandbox

./: .gitignore  CMakeLists.txt  README.md  build.bat
.cache/clangd/index/: application.c.F1D1931DAB6242B1.idx  application.h.90D28518B46A8071.idx  event.c.E1E20FA934733324.idx  graphics.c.87B850B4A0420B65.idx  graphics.h.4EC884CC9C64BAAB.idx  main.c.89B12FCF8B5344EA.idx  nuklear.h.DC8C0D4D3E984168.idx  proc.c.A94B64B4CFDA4A7E.idx  redefined_nuklear.h.2C24E3905C51680C.idx  typedef.h.DDFD65820FE82154.idx  window.c.C8943776DEEE4229.idx  window.h.5DE7A22009C8D9F2.idx
shaders/: pixel_shader.cso  pixel_shader.hlsl  vertex_shader.cso  vertex_shader.hlsl
src/: core.c  core.h  main.c  vector.c  vector.h
src/application/: application.c  application.h
src/event/: event.h
src/graphics/: BuildShaders.bat  graphics.c  graphics.h  pixel_shader.cso  pixel_shader.hlsl  vertex_shader.cso  vertex_shader.hlsl
src/math/: point.h  typedef.h
src/window/: proc.c  window.c  window.h
